simplify db
